fix: bag with navbar on ios

--- a/components/Navbar/NavMenu.scss
+++ b/components/Navbar/NavMenu.scss
@@ -71,6 +71,8 @@
 
         @include md {
             transform: translate(200%);
+            -webkit-transform: translate(200%);
+            -ms-transform: translate(200%);
             width: 50%;
             position: fixed;
             flex-direction: column;
@@ -88,6 +90,7 @@
         &.md {
             transform: translate(0);
             -webkit-transform: translate(0);
+            -ms-transform: translate(0);
         }
 
         .nav-item>a {
